# lemondb

./: Cargo.toml
.github/workflows/: ci.yml  loc.yml
async-lemondb/: Cargo.toml
async-lemondb/src/: future.rs  lib.rs
design/: DESIGN.md
lemondb/: Cargo.toml
lemondb-core/: Cargo.toml
lemondb-core/src/: active_log.rs  error.rs  generic_active_log.rs  immutable_log.rs  lib.rs  manifest.rs  types.rs  utils.rs  value_log.rs
lemondb-core/src/active_log/: generic.rs  log.rs  multiple_version.rs
lemondb-core/src/immutable_log/: meta.rs  multiple_version.rs
lemondb-core/src/immutable_log/meta/: plain.rs  ttl.rs
lemondb-core/src/manifest/: disk.rs  entry.rs  error.rs  memory.rs  options.rs  tests.rs
lemondb-core/src/types/: active_meta.rs  entry_ref.rs  fid.rs  generic_entry_ref.rs  generic_key.rs  generic_key_ref.rs  generic_value.rs  immutable_meta.rs  key.rs  key_ref.rs  log_extension.rs  meta.rs  pointer.rs  query.rs  table_id.rs  table_name.rs  value.rs
lemondb-core/src/value_log/: generic.rs  generic_entry.rs  log.rs  meta.rs
lemondb-core/src/value_log/generic/: entry.rs
lemondb-core/src/value_log/log/: entry.rs
lemondb/src/: active_log.rs  cache.rs  db.rs  error.rs  lib.rs  manifest.rs  options.rs  table.rs  types.rs  util.rs  wal.rs
lemondb/src/db/: tests.rs
lemondb/src/manifest/: disk.rs  memory.rs
lemondb/src/types/: key.rs
lemondb/src/wal/: lf.rs  vlf.rs
lemondb/src/wal/lf/: all_versions_iter.rs  iter.rs
lemondb/src/wal/vlf/: mmap.rs  mmap_anon.rs
src/: db.rs  error.rs  lf.rs  lib.rs  manifest.rs  options.rs  types.rs  util.rs  vlf.rs  wal.rs
src/db/: future.rs  sync.rs
src/lf/: all_versions_iter.rs  iter.rs  iterator.rs
src/manifest/: disk.rs  future.rs  memory.rs  sync.rs
src/vlf/: memory.rs  mmap.rs
src/wal/: lf.rs  sync.rs  vlf.rs
src/wal/lf/: all_versions_iter.rs  iter.rs
src/wal/vlf/: error.rs  memory.rs  mmap.rs  mmap_anon.rs
