[workspace]
members = ["lemondb", "async-lemondb"]

[workspace.dependencies]
aol = { path = "../aol" }
ahash = { version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
crc32fast = "1"
crossbeam-skiplist = { version = "0.1", default-features = false }
derive_more = "0.99"
enum_dispatch = "0.3"
either = { version = "1", default-features = false }
fs4 = "0.9"
hashbrown = { version = "0.14", default-features = false }
indexmap = { version = "2", default-features = false }
memmap2 = "0.9"
skl = { version = "0.14", path = "../skl-rs", default-features = false }
smallvec-wrapper = { version = "0.1", default-features = false, features = ["const_new"] }
smol_str = { version = "0.2", default-features = false }
time = "0.3"
thiserror = "1"
tracing = "0.1"
viewit = "0.1.5"
