[workspace]
members = ["lemondb", "async-lemondb"]
resolver = "2"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
crc32fast = "1"
crossbeam-skiplist = { version = "0.1", default-features = false }
derive_more = "0.99"
dbutils = { version = "0.4", default-features = false, features = ["default"] }
enum_dispatch = "0.3"
either = { version = "1", default-features = false }
fs4 = "0.9"
hashbrown = { version = "0.14", default-features = false }
indexmap = { version = "2", default-features = false }
memmap2 = "0.9"
once_cell = { version = "1", default-features = false }

# write ahead logs
aol = { version = "0.1", default-features = false, features = ["std"] }
orderwal = { version = "0.3", default-features = false, features = ["memmap"] }
skl = { version = "0.16", path = "../skl-rs", default-features = false, features = ["memmap"] }
valog = { version = "0.1", default-features = false, features = ["memmap"] }
dtlog = { version = "0.1", default-features = false, features = ["memmap"] }

smallvec-wrapper = { version = "0.1", default-features = false, features = ["const_new"] }
smol_str = { version = "0.2", default-features = false }
time = "0.3"
thiserror = "1"
tracing = "0.1"
viewit = "0.1.5"
