[workspace]
members = ["lemondb", "lemondb-core", "async-lemondb"]
resolver = "2"

[workspace.dependencies]
among = "0.1"
ahash = { version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
crc32fast = "1"
crossbeam-skiplist = { version = "0.1", default-features = false }
derive_more = "0.99"

enum_dispatch = "0.3"
either = { version = "1", default-features = false }
fs4 = "0.9"
hashbrown = { version = "0.14", default-features = false }
indexmap = { version = "2", default-features = false }
memmap2 = "0.9"
once_cell = { version = "1", default-features = false }

# utils
dbutils = { version = "0.4", default-features = false, features = ["default"] }
zerocopy = { version = "0.7", features = ["derive"] }

# write ahead logs
aol = { version = "0.1", default-features = false, features = ["std"] }
dtlog = { version = "0.1", default-features = false, features = ["memmap"] }
orderwal = { version = "0.4", path = "../orderwal", default-features = false, features = ["std"] }
skl = { version = "0.16", path = "../skl-rs", default-features = false, features = ["memmap"] }
valog = { version = "0.1", path = "../valog", default-features = false, features = ["memmap"] }
ref-cast = "1"

smallvec-wrapper = { version = "0.1", default-features = false, features = ["const_new"] }
smol_str = { version = "0.2", default-features = false }
time = "0.3"
thiserror = "1"
tracing = "0.1"
viewit = "0.1.5"

[packages.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"